--- a/Makefile_mipsel
+++ b/Makefile_mipsel
@@ -1,3 +1,6 @@
+# tried on router: xiaomi 4a gigabyte version
+# in source run make package/speedtest/compile
+#
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=speedtest
