--- a/Makefile_mipsel
+++ b/Makefile_mipsel
@@ -14,7 +14,7 @@ include $(INCLUDE_DIR)/package.mk
 define Package/speedtest
  SECTION:=utils
  CATEGORY:=Utilities
- TITLE:=test kecepatan khusus mips/mipsel
+ TITLE:=testing internet bandwidth for Arch MIPS routers
  DEPENDS:=+libpthread +libexpat +libcurl
 endef
 
